# Lab01_PART2_13775103

./: .env.example  .gitignore  Dockerfile  NEXT_STEPS.md  README.md  db.py  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
data/gold/: ingestion_gold.py  report_gold.py
data/raw/: ingestion_raw.py  validate_raw.py
data/silver/: analysis_silver.md  chart_silver.py  ingestion_silver.py  report_silver.py
gx/: great_expectations.yml
gx/expectations/: .ge_store_backend_id  students_raw_suite.json
gx/validation_definitions/: students_raw_validation.json
